--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <li>
             <nav class="main-navigation">
               <ul class="navigation-list">
-                <li class="navigation-item">
-                  <a class="navigation-link" href="#">Каталог</a>
+                <li class="navigation-item navigation-dropdown-active">
+                  <a class="navigation-link " href="#">Каталог</a>
                   <ul class="dropdown-list">
                     <li class="dropdown-item new">
                       <span class="dropdown-link">Новинки</span>
@@ -58,8 +58,10 @@
                   <a class="search-loupe" href="#">
                     <svg  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="33" height="33" viewBox="0 0 17 17"><path class="loupe-img" fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/></svg>
                   </a>
-                  <form action="#" class="search-form">
-                    <input class="input-custom search-field" type="text" placeholder="Что Ищем?">
+                  <form action="#" class="group search-form">
+                    <span class="custom-field-text"></span>
+                    <input class="input-custom search-field" type="text">
+                    <label class="input-custom-text">Что Ищем?</label>
                   </form>
                 </div>
               </li>
@@ -68,7 +70,7 @@
                   Вход
                   <svg class="svg-icon-login" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="19" viewBox="0 0 21 19"><g fill="#000"><path d="M6 14.875L12.917 9.5 6 4.125v2.917H-.042v4.917H6z"/><path d="M18 0H5C3.9 0 3 .9 3 2v2h2V2h13v15H5v-2H3v2c0 1.1.9 2 2 2h13c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2z"/></g></svg>
                 </a>
-                <form action="#" class="form-login">
+                <form action="#" class="group form-login">
                   <input class="input-custom login-field" type="email" name="email" placeholder="Электронная почта">
                   <input class="input-custom login-field" type="password" name="pass" placeholder="Пароль">
                   <ul class="row user-form-row">
