Сделал главную страницу по pirfectpixel

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <a class="navigation-link" href="#">Доставка и оплата</a>
                 </li>
                 <li class="navigation-item">
-                  <a class="navigation-link" href="#">О компании</a>
+                  <a class="navigation-link" href="#">О Компании</a>
                 </li>
               </ul>
             </nav>
@@ -60,8 +60,8 @@
                   </a>
                   <form action="#" class="group search-form">
                     <span class="custom-field-text"></span>
-                    <input class="input-custom search-field" type="text">
-                    <label class="input-custom-text">Что Ищем?</label>
+                    <input class="input-custom search-field" type="text" placeholder="Что Ищем?">
+                    <label class="input-custom-text"></label>
                   </form>
                 </div>
               </li>
@@ -109,37 +109,37 @@
             </div>
           </li>
         </ul>
-        <section class="slider">
-          <div class="container">
-              <div class="slide" id="slide-1">
-                <div class="slider-title">
-                  Крем-брюле и пломбир
-                  с малиновым джемом
-                </div>
-                <a class="btn btn-big" href="#">Давайте оба!</a>
-              </div>
-              <div class="slide" id="slide-2">
-                <div class="slider-title">
-                  Шоколадный пломбир и лимонный сорбет
-                </div>
-                <a class="btn btn-big" href="#">Давайте оба!</a>
-              </div>
-              <div class="slide" id="slide-3">
-                <div class="slider-title">
-                  Пломбир с помадкой и клубничным щербет
-                </div>
-                <a class="btn btn-big" href="#">Давайте оба!</a>
-              </div>
-              <div class="slider-controls">
-                <label for="btn-1"></label>
-                <label for="btn-2"></label>
-                <label for="btn-3"></label>
-              </div>
-            </div>
-        </section>
       </div>
     </header>
     <main class="container">
+      <section class="slider">
+        <div class="container">
+          <div class="slide" id="slide-1">
+            <div class="slider-title">
+              Крем-брюле и пломбир
+              с малиновым джемом
+            </div>
+            <a class="btn btn-big" href="#">Давайте оба!</a>
+          </div>
+          <div class="slide" id="slide-2">
+            <div class="slider-title">
+              Шоколадный пломбир и лимонный сорбет
+            </div>
+            <a class="btn btn-big" href="#">Давайте оба!</a>
+          </div>
+          <div class="slide" id="slide-3">
+            <div class="slider-title">
+              Пломбир с помадкой и клубничным щербет
+            </div>
+            <a class="btn btn-big" href="#">Давайте оба!</a>
+          </div>
+          <div class="slider-controls">
+            <label for="btn-1"></label>
+            <label for="btn-2"></label>
+            <label for="btn-3"></label>
+          </div>
+        </div>
+      </section>
       <section class="action">
         <ul class="row action-row">
           <li>
@@ -226,23 +226,23 @@
           <li>
             <div class="features-item icon-ice-cream">
               <p class="features-description">
-                Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества.
-                Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья
+                Все наше мороженое изготавливается на собственном производстве,
+                с использованием современного оборудования и проверенных временем технологий.
               </p>
             </div>
           </li>
           <li>
             <div class="features-item icon-cow">
               <p class="features-description">
-                Все наше мороженое изготавливается на собственном производстве,
-                с использованием современного оборудования и проверенных временем технологий.
+                Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний,
+                с которыми нас связывает долговременное сотрудничество.
             </div>
           </li>
           <li>
             <div class="features-item icon-eco">
               <p class="features-description">
-                Закупка ингредиентов  производится только у проверенных фермерских хозяйств
-                и компаний, с которыми нас связывает долговременное сотрудничество.
+                Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества.
+                Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья
               </p>
             </div>
           </li>
@@ -289,9 +289,9 @@
     <section class="maps">
       <div class="container">
         <div class="contacts">
-          <p class="contacts-title">Адрес главного офиса и офлайн магазина</p>
+          <p class="contacts-title">Адрес главного офиса<br> и офлайн магазина</p>
           <b class="contacts-adress">ул. Большая Конюшенная<br> 19/8, Санкт-Петербург</b>
-          <p>
+          <p class="order-telefone">
             Для заказов по телефону:
           </p>
           <b class="contacts-adress">
@@ -300,7 +300,7 @@
           <p class="contacts-title">
             (с 10 до 20 ежедневно)
           </p>
-          <a class="btn" href="#">Форма обратной связи</a>
+          <a class="btn btn-recall" href="#">Форма обратной связи</a>
         </div>
       </div>
     </section>
@@ -336,7 +336,7 @@
                   <img src="img/logo-htmlacademy.svg" alt="footer-logo">
                 </a>
               </div>
-              <a class="link-custom htmlacademy-link" href="https://htmlacademy.ru/">Сделано в HTML Academy &copy; 2017</a>
+              <a class="link-custom link-custom htmlacademy-link" href="https://htmlacademy.ru/">Сделано в HTML Academy &copy; 2017</a>
             </div>
           </li>
         </ul>
