Завершил верстку версия 2.0

--- a/catalog.html
+++ b/catalog.html
@@ -27,8 +27,8 @@
                   <li class="dropdown-item new">
                     <span class="dropdown-link">Новинки</span>
                   </li>
-                  <li class="dropdown-item">
-                    <a class="dropdown-link" href="catalog.html">Сливочное</a>
+                  <li class="dropdown-item dropdown-active">
+                    <a class="dropdown-link " href="catalog.html">Сливочное</a>
                   </li>
                   <li class="dropdown-item">
                     <a class="dropdown-link" href="#">Щербеты</a>
@@ -51,7 +51,7 @@
           </nav>
         </li>
         <li class="user-left">
-          <ul class="row user-row">
+          <ul class="row user-row user-left-row">
             <li>
               <div class="header-search">
                 <a class="search-loupe" href="#">
@@ -87,7 +87,7 @@
             </li>
             <li>
             <li class="user-block-item user-block-table">
-              <a class=" icon-basket icon-basket-active" href="#">2 товара</a>
+              <a class=" icon-basket icon-basket-active icon-basket-custom" href="#">2 товара</a>
               <table class="table-basket">
                 <tr>
                   <td>
@@ -172,7 +172,7 @@
       <form action="#" class="filter-form">
         <ul class="row filter-row">
           <li>
-            <div class="filter-item">
+            <div class="filter-item filter-item-width">
                 <b class="filter-title">Сортировка:</b>
                 <div class="filter-shadow">
                   <select class="filter-field filter-select-custom">
@@ -184,7 +184,7 @@
             </div>
           </li>
           <li>
-            <div class="filter-item">
+            <div class="filter-item filter-item-width">
               <b class="filter-title">цена: 100руб. - 500руб.</b>
               <div class="filter-shadow">
                 <div class="filter-range">
@@ -195,7 +195,7 @@
             </div>
           </li>
           <li>
-            <div class="filter-item">
+            <div class="filter-item filter-radio-width">
               <b class="filter-title">Жирность:</b>
               <div class="filter-shadow">
                 <label class="filter-radio-text" for="filter-label">
@@ -259,7 +259,7 @@
         </ul>
       </form>
     </div>
-    <section class="products">
+    <section class="products products-height">
       <ul class="row products-row products-row--wrap">
         <li>
           <div class="products-item">
@@ -443,7 +443,7 @@
       </ul>
     </div>
   </main>
-  <footer class="main-footer">
+  <footer class="main-footer main-footer-margin">
     <div class="container">
       <ul class="row footer-row">
         <li>
