--- a/index.html
+++ b/index.html
@@ -319,12 +319,12 @@
             <div class="about">
               <ul class="about-list">
                 <li class="about-item about-item-iconed">
-                  <a class="about-link about-icon-link" href="#">Для поставщиков</a>
-                  <a class="about-link" href="#">Наши документы</a>
+                  <a class="link-custom about-link about-icon-link" href="#">Для поставщиков</a>
+                  <a class="link-custom about-link" href="#">Наши документы</a>
                 </li>
                 <li class="about-item">
-                  <a class="about-link" href="#"> О производстве</a>
-                  <a class="about-link" href="#">Экологические стандарты</a>
+                  <a class="link-custom about-link" href="#"> О производстве</a>
+                  <a class="link-custom about-link" href="#">Экологические стандарты</a>
                 </li>
               </ul>
             </div>
