Вроде как сделал

--- a/catalog.html
+++ b/catalog.html
@@ -421,7 +421,7 @@
               <a class="pagination-btn prev" href="#">Prev</a>
             </li>
             <li class="paginator-item paginator-item--current">
-              <a class="paginator-link" href="#">1</a>
+              <span class="paginator-page--active">1</span>
             </li>
             <li class="paginator-item">
               <a class="paginator-link" href="#">2</a>
