--- a/index.html
+++ b/index.html
@@ -342,6 +342,16 @@
         </ul>
       </div>
     </footer>
+    <div class="modal-content modal-feedback">
+      <button class="modal-content-close" title="Закрыть">Закрыть</button>
+      <div class="feedback-form">
+        <b class="feedback-title">Мы обязательно вам ответим!</b>
+        <input class="input-custom" type="text" name="name" placeholder="Как вас зовут?">
+        <input class="input-custom" type="email" name="email" placeholder="Ваша почта для ответа?">
+        <textarea class="feedback-description" placeholder="Напишите что-нибудь..."></textarea>
+        <input class="btn btn-right" type="submit" value="Отправить">
+      </div>
+    </div>
   </div>
   </body>
 </html>
