Сделал минификацию стилей

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title> Gllacy Shop</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-min.css">
   </head>
   <body>
   <input type="radio" id="btn-1" name="toggle" checked>
@@ -287,6 +287,7 @@
       </ul>
     </main>
     <section class="maps">
+      <div id="map"></div>
       <iframe class="map" src="https://yandex.ua/map-widget/v1/-/CBUbU6GioC" width="100%" height="430" frameborder="0"></iframe>
       <div class="container">
         <div class="contacts">
@@ -355,6 +356,6 @@
       </form>
     </div>
   </div>
-  <script src="js/main.js"></script>
+  <script src="js/main-min.js"></script>
   </body>
 </html>
