Доделал доп критерии

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul class="row navigation-row">
           <li>
             <div class="header-logo">
-              <img src="img/logo.svg" alt="Логотип">
+              <img src="img/logo.svg" width="154" height="64" alt="Логотип">
             </div>
           </li>
           <li>
@@ -287,8 +287,7 @@
       </ul>
     </main>
     <section class="maps">
-      <div id="map"></div>
-      <iframe class="map" src="https://yandex.ua/map-widget/v1/-/CBUbU6GioC" width="100%" height="430" frameborder="0"></iframe>
+      <iframe class="map" src="https://yandex.ua/map-widget/v1/-/CBUbU6GioC"height="430"></iframe>
       <div class="container">
         <div class="contacts">
           <p class="contacts-title">Адрес главного офиса<br> и офлайн магазина</p>
@@ -335,7 +334,7 @@
             <div class="author">
               <div class="footer-logo">
                 <a href="https://htmlacademy.ru/">
-                  <img src="img/logo-htmlacademy.svg" alt="footer-logo">
+                  <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="footer-logo">
                 </a>
               </div>
               <a class="link-custom link-custom htmlacademy-link" href="https://htmlacademy.ru/">Сделано в HTML Academy &copy; 2017</a>
