--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
         <li>
           <div class="header-logo">
             <a href="index.html">
-              <img src="img/logo.svg" alt="Логотип">
+              <img src="img/logo.svg" width="154" height="64"  alt="Логотип">
             </a>
           </div>
         </li>
@@ -472,7 +472,7 @@
           <div class="author">
             <div class="footer-logo">
               <a href="https://htmlacademy.ru/">
-                <img src="img/logo-htmlacademy.svg" alt="footer-logo">
+                <img src="img/logo-htmlacademy.svg" width="108" height="39"  alt="footer-logo">
               </a>
             </div>
             <a class="link-custom htmlacademy-link" href="https://htmlacademy.ru/">Сделано в HTML Academy &copy; 2017</a>
