--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>Gllacy Shop</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-min.css">
 </head>
 <body class="catalog">
   <header class="main-header">
@@ -153,7 +153,7 @@
       </ul>
     </div>
   </header>
-  <main class="container">
+  <div class="container">
     <div class="breadcrumbs">
       <ul class="breadcrumbs-list">
         <li class="breadcrumbs-item">
@@ -442,7 +442,7 @@
         </li>
       </ul>
     </div>
-  </main>
+  </div>
   <footer class="main-footer main-footer-margin">
     <div class="container">
       <ul class="row footer-row">
@@ -458,12 +458,12 @@
           <div class="about">
             <ul class="about-list">
               <li class="about-item about-item-iconed">
-                <a class="about-link about-icon-link" href="#">Для поставщиков</a>
-                <a class="about-link" href="#">Наши документы</a>
+                <a class="link-custom about-link about-icon-link" href="#">Для поставщиков</a>
+                <a class="link-custom about-link" href="#">Наши документы</a>
               </li>
               <li class="about-item">
-                <a class="about-link" href="#"> О производстве</a>
-                <a class="about-link" href="#">Экологические стандарты</a>
+                <a class="link-custom about-link about-link-right" href="#"> О производстве</a>
+                <a class="link-custom about-link" href="#">Экологические стандарты</a>
               </li>
             </ul>
           </div>
