--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               </li>
               <li>
               <li class="user-block-item user-block-basket">
-                <a class="icon-basket" href="#">
+                <a class=" icon-basket" href="#">
                   Пусто
                 </a>
               </li>
@@ -111,7 +111,7 @@
         </ul>
       </div>
     </header>
-    <main class="container">
+    <div class="container">
       <section class="slider">
         <div class="container">
           <div class="slide" id="slide-1">
@@ -285,7 +285,7 @@
           </div>
         </li>
       </ul>
-    </main>
+    </div>
     <section class="maps">
       <iframe class="map" src="https://yandex.ua/map-widget/v1/-/CBUbU6GioC" height="430" ></iframe>
       <div class="container">
@@ -324,7 +324,7 @@
                   <a class="link-custom about-link" href="#">Наши документы</a>
                 </li>
                 <li class="about-item">
-                  <a class="link-custom about-link" href="#"> О производстве</a>
+                  <a class="link-custom about-link about-link-right" href="#"> О производстве</a>
                   <a class="link-custom about-link" href="#">Экологические стандарты</a>
                 </li>
               </ul>
@@ -333,11 +333,11 @@
           <li>
             <div class="author">
               <div class="footer-logo">
-                <a href="https://htmlacademy.ru/">
+                <a href="https://htmlacademy.ru/intensive/htmlcss" title="Логотип">
                   <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="footer-logo">
                 </a>
               </div>
-              <a class="link-custom link-custom htmlacademy-link" href="https://htmlacademy.ru/">Сделано в HTML Academy &copy; 2017</a>
+              <a class="link-custom link-custom htmlacademy-link" href="https://htmlacademy.ru/intensive/htmlcss">Сделано в HTML Academy &copy; 2017</a>
             </div>
           </li>
         </ul>
