Сделал все доп критерии

--- a/catalog.html
+++ b/catalog.html
@@ -25,7 +25,7 @@
                 <a class="navigation-link" href="#">Каталог</a>
                 <ul class="dropdown-list">
                   <li class="dropdown-item new">
-                    <span class="dropdown-link">Новинки</span>
+                    <span class="dropdown-text">Новинки</span>
                   </li>
                   <li class="dropdown-item dropdown-active">
                     <a class="dropdown-link " href="catalog.html">Сливочное</a>
@@ -174,13 +174,11 @@
           <li>
             <div class="filter-item filter-item-width">
                 <b class="filter-title">Сортировка:</b>
-                <div class="filter-shadow">
-                  <select class="filter-field filter-select-custom">
-                    <option value="filter">По популярности</option>
-                    <option value="filter">По популярности</option>
-                    <option value="filter">По популярности</option>
-                  </select>
-              </div>
+                <select class="filter-field filter-select-custom">
+                  <option value="filter">По популярности</option>
+                  <option value="filter">По популярности</option>
+                  <option value="filter">По популярности</option>
+                </select>
             </div>
           </li>
           <li>
@@ -443,7 +441,7 @@
       </ul>
     </div>
   </div>
-  <footer class="main-footer main-footer-margin">
+  <footer class="main-footer">
     <div class="container">
       <ul class="row footer-row">
         <li>
@@ -471,11 +469,13 @@
         <li>
           <div class="author">
             <div class="footer-logo">
-              <a href="https://htmlacademy.ru/">
-                <img src="img/logo-htmlacademy.svg" width="108" height="39"  alt="footer-logo">
+              <a href="https://htmlacademy.ru/intensive/htmlcss" title="Логотип">
+                <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="footer-logo">
               </a>
             </div>
-            <a class="link-custom htmlacademy-link" href="https://htmlacademy.ru/">Сделано в HTML Academy &copy; 2017</a>
+            <p class="text-copyright">
+              Сделано в  <a class="link-custom link-custom htmlacademy-link" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &copy; 2017
+            </p>
           </div>
         </li>
       </ul>
