--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   <a class="navigation-link " href="#">Каталог</a>
                   <ul class="dropdown-list">
                     <li class="dropdown-item new">
-                      <span class="dropdown-link">Новинки</span>
+                      <span class="dropdown-text">Новинки</span>
                     </li>
                     <li class="dropdown-item">
                       <a class="dropdown-link" href="catalog.html">Сливочное</a>
@@ -337,7 +337,9 @@
                   <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="footer-logo">
                 </a>
               </div>
-              <a class="link-custom link-custom htmlacademy-link" href="https://htmlacademy.ru/intensive/htmlcss">Сделано в HTML Academy &copy; 2017</a>
+              <p class="text-copyright">
+                Сделано в  <a class="link-custom link-custom htmlacademy-link" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &copy; 2017
+              </p>
             </div>
           </li>
         </ul>
