Сделал все доп критерии 2.0

--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
           <li>
             <div class="author">
               <div class="footer-logo">
+                Логотип HtmlAcademy
                 <a href="https://htmlacademy.ru/intensive/htmlcss" title="Логотип">
                   <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="footer-logo">
                 </a>
